[tool.poetry]
name = "gpt-all-star"
version = "0.1.0"
description = ""
authors = ["Yuya Kakui <y.kakui@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
langchain = "^0.1.0"
openai = "^1.6.1"
tiktoken = "^0.5.2"
rich = "^13.7.0"
prompt-toolkit = "^3.0.43"
termcolor = "^2.4.0"
gitpython = "^3.1.41"
requests = "^2.31.0"
typer = "^0.9.0"
pyfiglet = "^1.0.2"
langchain-openai = "^0.0.7"
selenium = "^4.17.2"
langgraph = "^0.0.24"
langchain-experimental = "^0.0.52"
llama-index = "^0.10.0"
tree-sitter-languages = "^1.10.2"
pygithub = "^2.2.0"

[tool.poetry.scripts]
gpt-all-star = 'gpt_all_star.main:app'

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
flake8 = "^7.0.0"
autopep8 = "^2.0.4"
pre-commit = "^3.6.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[project.scripts]
gpt-all-star = 'gpt_all_star.main:app'

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
