[tool.poetry]
name = "gpt-all-star"
version = "0.0.40"
description = "AI-powered code generation tool for scratch development of web applications with a team collaboration of autonomous AI agents. This is a research-project, and its primary value is to explore the possibility of autonomous AI agents."
authors = ["Yuya Kakui <y.kakui@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
Repository = "https://github.com/kyaukyuai/gpt-all-star"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.2"
langchain = "^0.2.0"
openai = "^1.6.1"
tiktoken = "^0.7.0"
rich = "^13.7.0"
prompt-toolkit = "^3.0.43"
termcolor = "^2.4.0"
gitpython = "^3.1.41"
requests = "^2.31.0"
typer = "^0.12.0"
pyfiglet = "^1.0.2"
langchain-openai = "^0.1.0"
selenium = "^4.17.2"
langgraph = "^0.0.50"
langchain-experimental = "^0.0.59"
llama-index = "^0.10.0"
tree-sitter-languages = "^1.10.2"
pygithub = "^2.2.0"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
langchain-anthropic = "^0.1.4"

[tool.poetry.scripts]
gpt-all-star = 'gpt_all_star.main:app'

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pre-commit = "^3.6.1"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.11"
python-semantic-release = "^9.1.1"
pyright = "^1.1.354"
ruff = "^0.4.1"
pytest = "^8.1.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_source = "tag"
branch = "main"
upload_to_PyPI = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[project.scripts]
gpt-all-star = 'gpt_all_star.main:app'

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
lint.select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
lint.ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
